--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <h2 class="hidden">Footer Banner Section </h2>
     <p class="hero_header"> SUBSCRIBE TO THIS WEBSITE</p>
     <div class="footer_column"></div>
-    <a href="contact-form-01/contactPage.html" style = "text-decoration:none">
+    <a href="contactPage.html" style = "text-decoration:none">
     <div class="button">subscribe</div>
    </a>
    <div class="footer_column"></div>
